# lang

./: .editorconfig  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
parsevm/: Cargo.toml  README.md
parsevm/src/: lib.rs  swar.rs
parsevm/src/grammar/: def.rs  mod.rs  ops.rs  parse.rs
parsevm/src/term/: mod.rs  tests.rs
